@@ -185,7 +185,7 @@ return condition ? 1:0;
 <li>Do not place spaces before comma and semicolon.
 <h4 class="right">Right:</h4>
 <pre class="code">
-for (int i = 0; i &lt; 10; i++)
+for (int i = 0; i &lt; 10; ++i)
     doSomething();
 
 f(a, b);
@@ -193,7 +193,7 @@ f(a, b);
 
 <h4 class="wrong">Wrong:</h4>
 <pre class="code">
-for (int i = 0 ; i &lt; 10 ; i++)
+for (int i = 0 ; i &lt; 10 ; ++i)
     doSomething();
 
 f(a , b) ;
@@ -340,7 +340,7 @@ namespace WebCore {
     ...
 }
 
-for (int i = 0; i &lt; 10; i++) {
+for (int i = 0; i &lt; 10; ++i) {
     ...
 }
 </pre>
