@@ -1,3 +1,15 @@
+2011-04-27  Ojan Vafai  <ojan@chromium.org>
+
+        Reviewed by Dan Bernstein.
+
+        change style guide to pre-increment in for-loops
+        https://bugs.webkit.org/show_bug.cgi?id=59619
+
+        This matches what a number of reviewers have been asking
+        for in code reviews.
+
+        * coding/coding-style.html:
+
 2011-04-26  Carol Szabo  <carol.szabo@nokia.com>
 
         Reviewed by Tor Arne Vestbø.
